# dnd-character-gen

./: .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml
data/: .gitignore
doc/: character_parts.json
scripts/: download_character_sheets.py  download_srd.py  get_fields.py  srd_pdf2txt.py  unzip_character_sheets.py
src/: __main__.py  create_tables.sql
src/app/: http_server.py
src/dnd_character_gen_steviestickman/: __main__.py
src/dnd_character_gen_steviestickman/App/: http_server.py
src/dnd_character_gen_steviestickman/static/: create_character.html  index.html
src/static/: index.html  signin.css  signin.html  styles.css
